syntax = "proto3";

package community.v1;
option go_package = "./pb";

// Community Service Definition
service CommunityService {
  // Public endpoints
  rpc GetAllCommunities(GetAllCommunitiesRequest) returns (GetAllCommunitiesResponse) {}
  rpc GetCommunityDetails(GetCommunityDetailsRequest) returns (GetCommunityDetailsResponse) {}
  rpc GetCommunityPosts(GetCommunityPostsRequest) returns (GetCommunityPostsResponse) {}
  
  // Admin endpoints
  rpc UpdateCommunity(UpdateCommunityRequest) returns (UpdateCommunityResponse) {}
  rpc CreateCommunity(CreateCommunityRequest) returns (CreateCommunityResponse) {}
}

// Request/Response messages
message CreateCommunityRequest {
  string community_name = 1;
  optional string introduction = 2;
}

message CreateCommunityResponse {
  int64 community_id = 1;
}

message GetAllCommunitiesRequest {
  optional int32 page = 1;
  optional int32 page_size = 2;
}

message GetAllCommunitiesResponse {
  int64 total = 1;
  repeated Community communities = 2;
}

message GetCommunityDetailsRequest {
  int64 community_id = 1;
}

message GetCommunityDetailsResponse {
  Community community = 1;
}

message GetCommunityPostsRequest {
  int64 community_id = 1;
  optional int32 page = 2;
  optional int32 page_size = 3;
}

message GetCommunityPostsResponse {
  int64 total = 1;
  repeated Post posts = 2;
}

message UpdateCommunityRequest {
  int64 community_id = 1;
  optional string community_name = 2;
  optional string introduction = 3;
}

message UpdateCommunityResponse {
  int64 community_id = 1;
}

// Model messages
message Community {
  int64 community_id = 1;
  string community_name = 2;
  string introduction = 3;
  string create_time = 4;
  string updated_time = 5;
}

message Post {
  int64 id = 1;
  string title = 2;
  string content = 3;
  string created_at = 4;
}